...
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_maininfo_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="50dp"
                android:paddingTop="20dp"
                android:paddingRight="50dp"
...
                    style="?attr/textInputOutlinedDenseStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_or_phone_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_or_phone_input_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:enabled="true"
                        android:inputType="text|textEmailAddress"
                        android:singleLine="true" />
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_input_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
...
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/login_button_main"
                            style="@style/Widget.Material3.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:enabled="@{allowAccountLogin}"
                            android:fontFamily="@font/nunito_medium"
                            android:onClick="onClickLoginButton"
...

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_2fa_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp"
                android:visibility="gone"
                tools:visibility="visible">


                <include layout="@layout/two_factor_code_row" />

                <TextView
                    android:id="@+id/twofa_sent_info_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/enter_the_verification_code_sent_to_your_number_x" />

...
                    android:background="@drawable/layout_rounded_less"
                    android:backgroundTint="?attr/colorErrorContainer"
                    android:visibility="invisible"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/verification_code_error_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_medium"
                        android:padding="8dp"
                        android:text="@string/twofactor_failed_x"
                        android:textColor="?attr/colorOnErrorContainer"
                        android:textSize="14sp" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
...
                    android:layout_marginRight="8dp"
                    android:gravity="left"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <Button
                        android:id="@+id/twofactorauthchoice_back_button"
                        style="?attr/materialIconButtonFilledTonalStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClickBackTo2FAMethodChoice"
                        app:icon="@drawable/arrow_back_24px"
                        app:iconTint="?attr/colorOnSecondaryContainer" />
...
