...
    <item
        android:id="@+id/action_refresh_from_account"
        android:title="@string/refresh_from_account" />

    <item
        android:id="@+id/action_import_from_file"
        android:title="@string/icloud_import_from_file" />

    <item
        android:id="@+id/action_import_history"
        android:title="@string/import_history" />

</menu>
...
